aws/prod/security_group.tf
resource "aws_security_group" "outbound_all" {
  name = "outbound_all"
  egress {
    from_port         = 0
    to_port           = 0
    protocol          = "all"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
}

resource "aws_security_group" "inbound_nextcloud" {
    name  = "inbound_nextcloud"
    ingress {
      from_port         = 3478
      to_port           = 3478
      protocol          = "tcp"
      cidr_blocks       = ["0.0.0.0/0"]
      ipv6_cidr_blocks  = ["::/0"]
    }
    ingress {
      from_port         = 3478
      to_port           = 3478
      protocol          = "udp"
      cidr_blocks       = ["0.0.0.0/0"]
      ipv6_cidr_blocks  = ["::/0"]
    }
    ingress {
      from_port         = 11000
      to_port           = 11000
      protocol          = "tcp"
      cidr_blocks       = ["0.0.0.0/0"]
      ipv6_cidr_blocks  = ["::/0"]
    }
} 

resource "aws_security_group" "inbound_ssh" {
    name  = "inbound_ssh"
    ingress {
      from_port         = 22
      to_port           = 22
      protocol          = "tcp"
      cidr_blocks       = ["0.0.0.0/0"]
      ipv6_cidr_blocks  = ["::/0"]
    }

    ingress {
      from_port         = 22
      to_port           = 22
      protocol          = "udp"
      cidr_blocks       = ["0.0.0.0/0"]
      ipv6_cidr_blocks  = ["::/0"]
    }
}

resource "aws_security_group" "inbound_http_https" {
  name = "inbound_http_https"

  ingress {
    from_port         = 80
    to_port           = 80
    protocol          = "udp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  ingress {
    from_port         = 443
    to_port           = 443
    protocol          = "udp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  ingress {
    from_port         = 80
    to_port           = 80
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  ingress {
    from_port         = 443
    to_port           = 443
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
}

resource "aws_security_group" "inbound_wireshark" {
  name = "inbound_wireshark"
  ingress {
    from_port         = 58211
    to_port           = 58211
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  ingress {
    from_port         = 58211
    to_port           = 58211
    protocol          = "udp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
}
resource "aws_security_group" "inbound_ftp" {
  name = "inbound_ftp"
  ingress {
    from_port         = 20
    to_port           = 20
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  ingress {
    from_port         = 20
    to_port           = 20
    protocol          = "udp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  ingress {
    from_port         = 21
    to_port           = 21
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  ingress {
    from_port         = 21
    to_port           = 21
    protocol          = "udp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  # passive ftp port, 30000-35000
  ingress {
    from_port         = 30000
    to_port           = 50000
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
  ingress {
    from_port         = 30000
    to_port           = 50000
    protocol          = "udp"
    cidr_blocks       = ["0.0.0.0/0"]
    ipv6_cidr_blocks  = ["::/0"]
  }
}
